--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.2"
